messaging_app/messaging_app/green_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: messaging-app-green
spec:
  replicas: 1
  selector:
    matchLabels:
      app: messaging-app
      version: green
  template:
    metadata:
      labels:
        app: messaging-app
        version: green
    spec:
      containers:
      - name: messaging-app
        image: messaging-app:v2   # your new image tag
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: messaging-app-green-service
spec:
  selector:
    app: messaging-app
    version: green
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8000
  type: ClusterIP
